--- a/package.json
+++ b/package.json
@@ -1,5 +1,13 @@
 {
   "name": "POC2u",
   "private": true,
-  "dependencies": {}
+  "dependencies": {
+    "@rails/actioncable": "^6.0.3-4",
+    "@rails/webpacker": "5.2.1",
+    "stimulus": "^1.1.1",
+    "stimulus_reflex": "3.3.0"
+  },
+  "devDependencies": {
+    "webpack-dev-server": "^3.11.0"
+  }
 }
