--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "@rails/actioncable": "^6.0.3-4",
     "@rails/webpacker": "5.2.1",
     "stimulus": "^1.1.1",
-    "stimulus_reflex": "3.3.0"
+    "stimulus_reflex": "3.4.0-pre4"
   },
   "devDependencies": {
     "webpack-dev-server": "^3.11.0"
