--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "POC2u",
   "private": true,
   "dependencies": {
-    "@rails/actioncable": "^6.0.3-4",
+    "@rails/ujs": "^6.0.3-4",
     "@rails/webpacker": "5.2.1",
+    "actioncable": "^5.2.4-4",
     "stimulus": "^1.1.1",
-    "stimulus_reflex": "3.4.0-pre4"
+    "stimulus_reflex": "3.4.0-pre4",
+    "turbolinks": "^5.2.0"
   },
   "devDependencies": {
     "webpack-dev-server": "^3.11.0"
