--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "@rails/ujs": "^6.0.3-4",
     "@rails/webpacker": "5.2.1",
     "actioncable": "^5.2.4-4",
+    "rails-ujs": "^5.2.4-4",
     "stimulus": "^1.1.1",
     "stimulus_reflex": "3.4.0-pre4",
     "turbolinks": "^5.2.0"
