add engine node version to package.json

--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "stimulus_reflex": "3.4.0-pre4",
     "turbolinks": "^5.2.0"
   },
+  "engines": {
+    "node": "12.0"
+  },
   "devDependencies": {
     "webpack-dev-server": "^3.11.0"
   }
