WIP: Testing input state

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "@rails/ujs": "^6.0.3-4",
     "@rails/webpacker": "5.2.1",
     "actioncable": "^5.2.4-4",
+    "debounced": "^0.0.5",
     "rails-ujs": "^5.2.4-4",
     "stimulus": "^1.1.1",
     "stimulus_reflex": "^3.4.0-pre9",
